[gd_scene load_steps=22 format=3 uid="uid://byhur504waec0"]

[ext_resource type="Script" uid="uid://dr5kwj7uptsbq" path="res://shop/shop.gd" id="1_gy7ao"]
[ext_resource type="Texture2D" uid="uid://sn8jbi8r1l2e" path="res://assets/art/shop/buttons/launch_button_normal.png" id="3_2wf2a"]
[ext_resource type="Resource" uid="uid://6mawpae7apr7" path="res://core/pony_stats.tres" id="3_xad5q"]
[ext_resource type="PackedScene" uid="uid://dewexmnyk7otn" path="res://shop/upgrade_book/upgrade_book.tscn" id="3_yrv44"]
[ext_resource type="Texture2D" uid="uid://dhfmiougsegtg" path="res://assets/art/shop/buttons/launch_button_press.png" id="4_xad5q"]
[ext_resource type="Texture2D" uid="uid://kdtvrbcf6th" path="res://assets/art/shop/Shop_Desk_003.png" id="4_yrv44"]
[ext_resource type="Texture2D" uid="uid://bc43kg7pi5py1" path="res://assets/art/shop/buttons/launch_button_hover.png" id="5_ljlg5"]
[ext_resource type="Texture2D" uid="uid://bsks4or3h7h7d" path="res://assets/art/shop/buttons/fuel_buysign_1_normal.png" id="8_bv5vx"]
[ext_resource type="Texture2D" uid="uid://bgoxn6pp8g48u" path="res://assets/art/shop/buttons/fuel_buysign_1_pressed.png" id="9_mmyc1"]
[ext_resource type="Texture2D" uid="uid://b4vuvxkwo2eyi" path="res://assets/art/shop/buttons/fuel_buysign_1_hover.png" id="10_orod7"]
[ext_resource type="PackedScene" uid="uid://2nwncnt6pa1y" path="res://shop/check_button_row.tscn" id="11_mmyc1"]
[ext_resource type="Texture2D" uid="uid://ccmslr614nfwt" path="res://assets/art/shop/buttons/back_normal.png" id="11_yrv44"]
[ext_resource type="Texture2D" uid="uid://bqbp00do5bnud" path="res://assets/art/shop/buttons/back_pressed.png" id="12_pafut"]
[ext_resource type="Texture2D" uid="uid://bp211m767j4tg" path="res://assets/art/shop/buttons/back_hover.png" id="13_hv745"]
[ext_resource type="PackedScene" uid="uid://3tpoiqp6wdoo" path="res://shop/open_book_button.tscn" id="15_pafut"]

[sub_resource type="LabelSettings" id="LabelSettings_pafut"]
font_size = 80
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_hv745"]
font_size = 80

[sub_resource type="LabelSettings" id="LabelSettings_c8ks2"]
font_size = 60
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yrv44"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cd0xb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pafut"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10

[node name="Shop" type="CanvasLayer" node_paths=PackedStringArray("book_buttons")]
script = ExtResource("1_gy7ao")
pony_stats = ExtResource("3_xad5q")
upgrade_book_scene = ExtResource("3_yrv44")
book_buttons = [NodePath("OpenBook Gliders"), NodePath("OpenBook Propulsion"), NodePath("OpenBook Body"), NodePath("OpenBook Money")]

[node name="TextureRect ShopBG" type="TextureRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("4_yrv44")

[node name="TextureButton Launch" type="TextureButton" parent="."]
offset_left = 1529.0
offset_top = 797.0
offset_right = 1918.0
offset_bottom = 1080.0
texture_normal = ExtResource("3_2wf2a")
texture_pressed = ExtResource("4_xad5q")
texture_hover = ExtResource("5_ljlg5")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureButton Fuel" type="TextureButton" parent="."]
offset_left = 24.0
offset_top = 856.0
offset_right = 490.0
offset_bottom = 1030.0
texture_normal = ExtResource("8_bv5vx")
texture_pressed = ExtResource("9_mmyc1")
texture_hover = ExtResource("10_orod7")

[node name="TextureButton Back" type="TextureButton" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 679.0
offset_top = -612.0
offset_right = 952.0
offset_bottom = -486.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = ExtResource("11_yrv44")
texture_pressed = ExtResource("12_pafut")
texture_hover = ExtResource("13_hv745")
ignore_texture_size = true
stretch_mode = 0

[node name="ButtonRow Speed" parent="." instance=ExtResource("11_mmyc1")]
offset_left = 536.0
offset_top = 59.0
offset_right = 536.0
offset_bottom = 59.0
scale = Vector2(0.756786, 0.756786)
title = "Running Speed"
pony_stats = ExtResource("3_xad5q")

[node name="ButtonRow Height" parent="." instance=ExtResource("11_mmyc1")]
offset_left = 536.0
offset_top = 223.0
offset_right = 536.0
offset_bottom = 223.0
scale = Vector2(0.756786, 0.756786)
title = "Jump Height"
pony_stats = ExtResource("3_xad5q")
stat = 4

[node name="MoneyLabel" type="Label" parent="."]
custom_minimum_size = Vector2(150, 0)
offset_left = 89.0
offset_top = 192.0
offset_right = 239.0
offset_bottom = 228.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
text = "$0"
horizontal_alignment = 1

[node name="FuelLabel" type="Label" parent="."]
offset_left = 138.0
offset_top = 662.0
offset_right = 248.0
offset_bottom = 772.0
text = "0 L"
label_settings = SubResource("LabelSettings_pafut")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BuyFuelLabel" type="Label" parent="."]
custom_minimum_size = Vector2(300, 0)
offset_left = 70.0
offset_top = 880.0
offset_right = 370.0
offset_bottom = 990.0
text = "$10"
label_settings = SubResource("LabelSettings_hv745")
horizontal_alignment = 1
vertical_alignment = 1

[node name="DayLabel" type="Label" parent="."]
custom_minimum_size = Vector2(220, 200)
offset_left = 1583.0
offset_top = 103.0
offset_right = 1803.0
offset_bottom = 303.0
text = "Day 1"
label_settings = SubResource("LabelSettings_c8ks2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Reset" type="Button" parent="."]
offset_left = 25.0
offset_top = 9.0
offset_right = 267.0
offset_bottom = 72.0
theme_override_colors/font_hover_color = Color(0.839216, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0.486275, 0.0156863, 1)
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_constants/outline_size = 22
theme_override_font_sizes/font_size = 34
theme_override_styles/focus = SubResource("StyleBoxEmpty_yrv44")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_yrv44")
theme_override_styles/hover = SubResource("StyleBoxEmpty_yrv44")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_yrv44")
theme_override_styles/normal = SubResource("StyleBoxEmpty_cd0xb")
text = "Reset Progress"

[node name="OpenBook Gliders" parent="." instance=ExtResource("15_pafut")]
theme_override_styles/normal = SubResource("StyleBoxFlat_pafut")
empty_text = "Buy
Wings"

[node name="OpenBook Propulsion" parent="." instance=ExtResource("15_pafut")]
offset_left = 609.0
offset_top = 686.0
offset_right = 859.0
offset_bottom = 836.0
category = 1
empty_text = "Buy
Propulsion"

[node name="OpenBook Body" parent="." instance=ExtResource("15_pafut")]
offset_left = 1111.0
offset_top = 503.0
offset_right = 1361.0
offset_bottom = 653.0
category = 2
empty_text = "Buy
Gear"

[node name="OpenBook Money" parent="." instance=ExtResource("15_pafut")]
offset_left = 1028.0
offset_top = 683.0
offset_right = 1278.0
offset_bottom = 833.0
category = 3
empty_text = "Invest"

[connection signal="pressed" from="TextureButton Launch" to="." method="_on_texture_button_launch_pressed"]
[connection signal="pressed" from="TextureButton Fuel" to="." method="_on_texture_button_fuel_pressed"]
[connection signal="pressed" from="TextureButton Back" to="." method="_on_texture_button_back_pressed"]
[connection signal="pressed" from="Reset" to="." method="_on_reset_pressed"]
[connection signal="open_book" from="OpenBook Gliders" to="." method="_on_open_book_pressed"]
[connection signal="open_book" from="OpenBook Propulsion" to="." method="_on_open_book_pressed"]
[connection signal="open_book" from="OpenBook Body" to="." method="_on_open_book_pressed"]
[connection signal="open_book" from="OpenBook Money" to="." method="_on_open_book_pressed"]
